Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105521

Mediaplayer working with ffmpeg hangs on playback rate changing

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • None
    • 6.3.1
    • Multimedia
    • None

    Description

      Steps:

      1. set env var QT_MEDIA_BACKEND=ffmpeg
      2. run example examples\multimedia\video\mediaplayer
      3. Open a video. The bug is reproduced very often on this one https://file-examples.com/storage/fe522079b962f100d94fb66/2017/04/file_example_MP4_480_1_5MG.mp4
      4. While the video is playing, change the rate several times

      ER: The playback rate is changed every time

      AR: The app hangs very often (after 2nd-3rd changing) 

       

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-105521
          # Subject Branch Project Status CR V

          Activity

            People

              artemiy Artem Dyomin
              artemiy Artem Dyomin
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes