Fix media player deadlock with ffmpeg background

Briefly, this kind of deadlock occurs when one thread locks
mutex A and then mutex B, whereas other thread locks B and then A.
By the design, the problem in the code is following:
ClockController::setPlaybackRate (locks mutex A) =>
Renderer::setPlaybackRate (locks mutex B), renderer is a thread.

ClockController::setPaused (locks mutex A) =>
Renderer::setPaused (locks mutex B)

and

Thread::run (locks mutex B) =>
AudioRenderer::loop => ClockController::timeUpdated (locks mutex A)
Thread::run (locks mutex B) =>
AudioRenderer::loop => ClockController::currentTime (locks mutex A)
The deadlock was reproduced pretty easy,
it was enough to change the plaback rate a few times while playing.

The solution is to protect by mutex A only data
that can be accessed from threads.
Clocks creation, removal and iteration are expected from
the main thread, so we don't have to synchronize them.
Clock *m_master can be read from threads,
so it has been refactored as atomic.
A stress test for this case has been implemented,
see codereview 428720.
Note, the fix doesn't fix all threading problems
in this design (the mentioned test has found new ones),
so the design is to be refactored in order to make it safe and clear.
Current solution is sufficient for 6.4.

Pick-to: 6.4
Task-number: QTBUG-105521
Change-Id: Ic8b9a158ecee3ee5f0d5249a283bbc024b57d31c
Reviewed-by: Lars Knoll <lars@knoll.priv.no>