src/plugins/multimedia/ffmpeg/qffmpegclock.cpp
@@ -7,6 +7,17 @@ Q_LOGGING_CATEGORY(qLcClock, "qt.multimedia.ffmpeg.clock")
 
 QT_BEGIN_NAMESPACE
 
+static bool compareClocks(const QFFmpeg::Clock *a, const QFFmpeg::Clock *b)
+{
+    if (!b)
+        return false;
+
+    if (!a)
+        return true;
+
+    return a->type() < b->type();
+}
+
 QFFmpeg::Clock::Clock(ClockController *controller)
     : controller(controller)
 {
@@ -22,7 +33,7 @@ QFFmpeg::Clock::~Clock()
 
 qint64 QFFmpeg::Clock::currentTime() const
 {
-    return controller ? controller->currentTime() : 0.;
+    return controller ? controller->currentTime() : 0;
 }
 
 void QFFmpeg::Clock::syncTo(qint64 time)
@@ -54,7 +65,7 @@ qint64 QFFmpeg::Clock::usecsTo(qint64 currentTime, qint64 displayTime)
 {
     if (!controller || controller->m_isPaused)
         return -1;
-    int t = qRound64((displayTime - currentTime)/playbackRate());
+    const qint64 t = qRound64((displayTime - currentTime) / playbackRate());
     return t < 0 ? 0 : t;
 }
 
@@ -65,7 +76,6 @@ QFFmpeg::Clock::Type QFFmpeg::Clock::type() const
 
 QFFmpeg::ClockController::~ClockController()
 {
-    QMutexLocker l(&m_mutex);
     for (auto *p : qAsConst(m_clocks))
         p->setController(nullptr);
 }
@@ -73,7 +83,7 @@ QFFmpeg::ClockController::~ClockController()
 qint64 QFFmpeg::ClockController::timeUpdated(Clock *clock, qint64 time)
 {
     QMutexLocker l(&m_mutex);
-    if (clock != m_master) {
+    if (!isMaster(clock)) {
         // If the clock isn't the master clock, simply return the current time
         // so we can make adjustments as needed
         return currentTimeNoLock();
@@ -81,7 +91,7 @@ qint64 QFFmpeg::ClockController::timeUpdated(Clock *clock, qint64 time)
 
     // if the clock is the master, adjust our base timing
     m_baseTime = time;
-    m_timer.restart();
+    m_elapsedTimer.restart();
 
     // Avoid posting too many updates to the notifyObject, or we can overload
     // the event queue with too many notifications
@@ -96,38 +106,39 @@ qint64 QFFmpeg::ClockController::timeUpdated(Clock *clock, qint64 time)
 
 void QFFmpeg::ClockController::addClock(Clock *clock)
 {
-    QMutexLocker l(&m_mutex);
     qCDebug(qLcClock) << "addClock" << clock;
     Q_ASSERT(clock != nullptr);
 
     if (m_clocks.contains(clock))
         return;
 
-    if (!m_master)
-        m_master = clock;
-
     m_clocks.append(clock);
-    clock->syncTo(currentTimeNoLock());
-    clock->setPaused(m_isPaused);
+    m_master = std::max(m_master.loadAcquire(), clock, compareClocks);
 
-    // update master clock
-    if (m_master != clock && clock->type() > m_master->type())
-        m_master = clock;
+    clock->syncTo(currentTime());
+    clock->setPaused(m_isPaused);
 }
 
 void QFFmpeg::ClockController::removeClock(Clock *clock)
 {
-    QMutexLocker l(&m_mutex);
     qCDebug(qLcClock) << "removeClock" << clock;
     m_clocks.removeAll(clock);
     if (m_master == clock) {
         // find a new master clock
-        m_master = nullptr;
-        for (auto *c : qAsConst(m_clocks)) {
-            if (!m_master || m_master->type() < c->type())
-                m_master = c;
-        }
+        m_master = m_clocks.empty()
+                ? nullptr
+                : *std::max_element(m_clocks.begin(), m_clocks.end(), compareClocks);
     }
+}
+
+bool QFFmpeg::ClockController::isMaster(const Clock *clock) const
+{
+    return m_master.loadAcquire() == clock;
+}
+
+qint64 QFFmpeg::ClockController::currentTimeNoLock() const
+{
+    return m_isPaused ? m_baseTime : m_baseTime + m_elapsedTimer.elapsed() / m_playbackRate;
 }
 
 qint64 QFFmpeg::ClockController::currentTime() const
@@ -138,41 +149,61 @@ qint64 QFFmpeg::ClockController::currentTime() const
 
 void QFFmpeg::ClockController::syncTo(qint64 usecs)
 {
-    QMutexLocker l(&m_mutex);
-    qCDebug(qLcClock) << "syncTo" << usecs;
-    m_baseTime = usecs;
-    m_seekTime = usecs;
-    m_timer.restart();
+    {
+        QMutexLocker l(&m_mutex);
+        qCDebug(qLcClock) << "syncTo" << usecs;
+        m_baseTime = usecs;
+        m_seekTime = usecs;
+        m_elapsedTimer.restart();
+    }
+
     for (auto *p : qAsConst(m_clocks))
         p->syncTo(usecs);
 }
 
-void QFFmpeg::ClockController::setPlaybackRate(float s)
+void QFFmpeg::ClockController::setPlaybackRate(float rate)
 {
-    QMutexLocker l(&m_mutex);
-    qCDebug(qLcClock) << "setPlaybackRate" << s;
-    m_baseTime = currentTimeNoLock();
-    m_timer.restart();
-    m_playbackRate = s;
+    qint64 baseTime = 0;
+    {
+        qCDebug(qLcClock) << "setPlaybackRate" << rate;
+
+        QMutexLocker l(&m_mutex);
+
+        m_baseTime = baseTime = currentTimeNoLock();
+        m_elapsedTimer.restart();
+        m_playbackRate = rate;
+    }
+
     for (auto *p : qAsConst(m_clocks))
-        p->setPlaybackRate(s, m_baseTime);
+        p->setPlaybackRate(rate, baseTime);
 }
 
 void QFFmpeg::ClockController::setPaused(bool paused)
 {
-    QMutexLocker l(&m_mutex);
-    if (m_isPaused == paused)
-        return;
-    qCDebug(qLcClock) << "setPaused" << paused;
-    m_isPaused = paused;
-    if (m_isPaused) {
-        m_baseTime = currentTimeNoLock();
-        m_seekTime = m_baseTime;
-    } else {
-        m_timer.restart();
+    {
+        QMutexLocker l(&m_mutex);
+        if (m_isPaused == paused)
+            return;
+        qCDebug(qLcClock) << "setPaused" << paused;
+        m_isPaused = paused;
+        if (m_isPaused) {
+            m_baseTime = currentTimeNoLock();
+            m_seekTime = m_baseTime;
+        } else {
+            m_elapsedTimer.restart();
+        }
     }
+
     for (auto *p : qAsConst(m_clocks))
         p->setPaused(paused);
+}
+
+void QFFmpeg::ClockController::setNotify(QObject *object, QMetaMethod method)
+{
+    QMutexLocker l(&m_mutex);
+
+    notifyObject = object;
+    notify = method;
 }
 
 QT_END_NAMESPACE
